# last-letter-game

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
docker/: README.md
game/: __init__.py  example.py  main.py  node.py
