# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "game"
version = "0.1.0"
description = "Distributed game"
readme = "README.md"
authors = ["DSMPF students <a.garihanov@innopolis.university>"]
repository = "https://github.com/a1d4r/game"
homepage = "https://github.com/a1d4r/game"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]



[tool.poetry.dependencies]
python = "^3.9"
p2pnetwork = { git = "https://github.com/macsnoeren/python-p2p-network.git", branch = "development" }
loguru = "^0.5.3"
typer = "^0.4.0"
redis = "^4.0.2"
pottery = "^2.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = {version = "^21.10b0", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pyupgrade = "^2.29.0"
safety = "^1.10.3"
autoflake = "^1.4"
pytest-cov = "^3.0.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--cov=game",
]

[tool.pylint.master]
fail-under = 10.0
ignore = ["CVS"]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "unused-argument",
  "no-value-for-parameter",
  "no-member",
  "no-else-return",
  "bad-whitespace",
  "bad-continuation",
  "line-too-long",
  "fixme",
  "protected-access",
  "too-few-public-methods",
  "invalid-name",
  "unspecified-encoding",
  "no-self-argument",  # pydantic validators
  "no-self-use",  # pydantic validators
  "redefined-outer-name",  # pytest fixtures
  "redefined-builtin",  # id
]

[tool.pylint.refactoring]
max-nested-blocks = 3

[tool.pylint.miscellaneous]
notes = ["FIXME", "TODO"]

[tool.pylint.basic]
class-attribute-naming-style = "any"
class-const-naming-style = "any"
good-names=["i", "j", "k", "e", "x", "id", "_", "pk"]

[tool.pylint.format]
max-module-lines = 300

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-docstrings = true
ignore-comments = true
ignore-imports = true

[tool.pylint.design]
max-args = 10
max-attributes = 10
max-statements = 30

[tool.pylint.exceptions]
overgeneral-exceptions = ["BaseException", "Exception"]

[tool.bandit]
skips = ["B101"]

[tool.poetry.scripts]
last-letter = "game.main:app"
